# image-viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
